Update links in index.html for interactive gallery

--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 <body>
     <h1>Mis Gráficos</h1>
     <ul>
-        <li><a href="graph1.html">Gráfico 1</a></li>
-        <li><a href="graph2.html">Gráfico 2</a></li>
-        <li><a href="graph3.html">Gráfico 3</a></li>
-        <li><a href="graph4.html">Gráfico 4</a></li>
+        <li><a href="interactive_gallery.html">Ej</a></li>
     </ul>
 </body>
 </html>
