--- a/reports/figs_html/NIPPLE_4.html
+++ b/reports/figs_html/NIPPLE_4.html
@@ -2,17 +2,75 @@
 <meta charset="utf-8">
 <title>MS-39 — row 3 · Clase: nipple</title>
 <style>
-  body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; margin: 16px; }
-  h2 { margin: 0 0 12px 0; }
-  .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 16px; }
-  .card { border: 1px solid #ddd; border-radius: 10px; padding: 10px;
-           box-shadow: 0 2px 6px rgba(0,0,0,0.06); background: #fff; }
-  .card-title { font-weight: 600; margin: 6px 4px 10px 4px; }
-  .card-body > div { height: 420px; }
+  body { 
+    font-family: "Times New Roman", Times, serif; 
+    margin: 12px; 
+    padding: 0;
+    background-color: #fdfdfd;
+  }
+  h2 { 
+    margin: 0 0 16px 0; 
+    font-size: 1.2rem;
+    font-weight: normal;
+    color: #212529;
+    text-align: center;
+    border-bottom: 1px solid #dee2e6;
+    padding-bottom: 8px;
+  }
+  .grid { 
+    display: grid; 
+    grid-template-columns: 1fr; 
+    gap: 16px; 
+  }
+  @media (min-width: 768px) {
+    .grid { grid-template-columns: 1fr 1fr; }
+  }
+  @media (min-width: 1200px) {
+    .grid { grid-template-columns: repeat(auto-fit, minmax(600px, 1fr)); }
+  }
+  .card { 
+    border: 1px solid #cccccc; 
+    border-radius: 4px; 
+    padding: 8px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05); 
+    background: #ffffff; 
+  }
+  .card-title { 
+    font-weight: normal; 
+    margin: 4px 0 8px 0; 
+    font-size: 0.9rem;
+    color: #495057;
+  }
+  .card-body > div { 
+    height: 60vh; 
+    min-height: 400px;
+    max-height: 700px;
+  }
+  
+  /* Navigation back button */
+  .nav-back {
+    position: fixed;
+    top: 16px;
+    left: 16px;
+    background: #ffffff;
+    border: 1px solid #cccccc;
+    padding: 8px 12px;
+    text-decoration: none;
+    color: #495057;
+    font-size: 0.85rem;
+    border-radius: 4px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+    z-index: 1000;
+  }
+  .nav-back:hover {
+    background: #f5f5f5;
+    color: #212529;
+  }
 </style>
 <script src="https://cdn.plot.ly/plotly-2.35.2.min.js"></script>
 </head><body>
-  <h2>MS-39 — row 3 · Clase: nipple</h2>
+  <a href="../../index.html" class="nav-back">← Volver</a>
+  <h2>Fenotipo: Nipple</h2>
   <div class="grid">
     
         <div class="card">
