--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Cone-Selector - Biblioteca de fenotipos de queratocono">
-    <title>Cone-Selector</title>
+    <meta name="description" content="Cone-Detector - Biblioteca de fenotipos de queratocono">
+    <title>Cone-Detector</title>
     <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
     <link rel="stylesheet" href="assets/styles.css">
 </head>
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="header-container">
             <a href="index.html" class="site-title">
-                Cone-Selector
+                Cone-Detector
             </a>
             <nav aria-label="Navegación principal">
                 <ul class="nav-links">
@@ -36,7 +36,7 @@
     <main id="main-content" class="main-content">
         <!-- Header Section -->
         <section class="header-section">
-            <h1>Cone-Selector</h1>
+            <h1>Cone-Detector</h1>
             <p>Biblioteca de fenotipos de queratocono - Selección de zona del cono mediante grafos y operador laplaciano</p>
         </section>
         
@@ -63,7 +63,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-content">
-            <p>Cone-Selector | Análisis de fenotipos de queratocono</p>
+            <p>Cone-Detector | Análisis de fenotipos de queratocono</p>
         </div>
     </footer>
     
